@@ -1,0 +1,41 @@
+Name: CDF_2012_I1124333
+Year: 2012
+Summary: CDF measurement of the Z pT in the electron channel using 2.1 fb-1
+Experiment: CDF
+Collider: Tevatron
+InspireID: 1124333
+Status: UNVALIDATED
+Authors:
+ - Simone Amoroso <amoroso@cern.ch>
+References:
+ - Phys.Rev.D 86, 052010 (2012)
+ - arXiv:hep-ex/arXiv:1207.7138v3
+ - doi:10.1103/PhysRevD.86.052010   
+RunInfo: $Z\to ee$ event,  a cut on the dilepton invariant mass between 60 and 120 GeV can be added to increase statistics
+NumEvents: 1000000
+NeedCrossSection: no
+Beams: [p-,p+]
+Energies: [1960]
+#PtCuts: <Insert list of kinematic pT cuts in GeV, e.g. [0, 20]>
+#NeedCrossSection: True
+Description: Measurement of the Z boson pT in the electron channel performed by the CDF experiment, using ppbar  at 1960 GeV.  A cut on the dielectron  invariant mass  of $66 GeV < m_{ee} < 116 GeV$ is applied.
+BibKey: Aaltonen:2012fi
+BibTeX: '@article{Aaltonen:2012fi,
+      author         = "Aaltonen, T. and others",
+      title          = "{Transverse momentum cross section of $e^+e^-$ pairs in
+                        the $Z$-boson region from $p\bar{p}$ collisions at
+                        $\sqrt{s}=1.96$ TeV}",
+      collaboration  = "CDF",
+      journal        = "Phys.Rev.",
+      volume         = "D86",
+      pages          = "052010",
+      doi            = "10.1103/PhysRevD.86.052010",
+      year           = "2012",
+      eprint         = "1207.7138",
+      archivePrefix  = "arXiv",
+      reportNumber   = "FERMILAB-PUB-12-421-E",
+      SLACcitation   = "%%CITATION = ARXIV:1207.7138;%%",
+}'
+ToDo:
+ - Implement the analysis, test it, remove this ToDo, and mark as VALIDATED :-)
+
