@@ -1,0 +1,15 @@
+# BEGIN PLOT /CDF_2012_I1124333/d01-x01-y01
+#Title=[Uncomment and insert title for histogram d01-x01-y01 here]
+#XLabel=[Uncomment and insert x-axis label for histogram d01-x01-y01 here]
+#YLabel=[Uncomment and insert y-axis label for histogram d01-x01-y01 here]
+# + any additional plot settings you might like, see make-plots documentation
+# END PLOT
+
+
+# BEGIN PLOT /CDF_2012_I1124333/d02-x01-y01
+Title=$p_\perp(Z)$ in $Z \to e^+ e^-$ events
+XLabel=$p_\perp(Z)$ [$\text{GeV}\!/\!c$]
+YLabel=$\mathrm{d}{\sigma}/\mathrm{d}{p_\perp(Z)}$ [$\text{pb} / (\text{GeV}\!/\!c)$]
+# END PLOT
+
+
