@@ -1,0 +1,97 @@
+# BEGIN YODA_SCATTER2D /REF/CDF_2012_I1124333/d01-x01-y01
+Path=/REF/CDF_2012_I1124333/d01-x01-y01
+Type=Scatter2D
+# xval   xerr-   xerr+   yval   yerr-   yerr+
+1960.0	0.0	0.0			256.1	2.906888370749727	2.906888370749727
+# END YODA_SCATTER2D 
+
+
+# BEGIN YODA_SCATTER2D /REF/CDF_2012_I1124333/d02-x01-y01
+Path=/REF/CDF_2012_I1124333/d02-x01-y01
+Type=Scatter2D
+# xval   xerr-   xerr+   yval   yerr-   yerr+
+0.25	0.25	0.25			3.613	0.1716071094098377	0.1716071094098377
+0.75	0.25	0.25			10.08	0.2879236009777594	0.2879236009777594
+1.25	0.25	0.25			15.51	0.3624913792078372	0.3624913792078372
+1.75	0.25	0.25			19.47	0.4159326868617084	0.4159326868617084
+2.25	0.25	0.25			21.58	0.442944691807002	0.442944691807002
+2.75	0.25	0.25			22.95	0.46141087980237316	0.46141087980237316
+3.25	0.25	0.25			22.58	0.44777226354476224	0.44777226354476224
+3.75	0.25	0.25			22.35	0.44777226354476224	0.44777226354476224
+4.25	0.25	0.25			20.61	0.42544094772365293	0.42544094772365293
+4.75	0.25	0.25			19.87	0.41182520563948	0.41182520563948
+5.25	0.25	0.25			18.76	0.39824615503479754	0.39824615503479754
+5.75	0.25	0.25			17.29	0.38013155617496425	0.38013155617496425
+6.25	0.25	0.25			15.63	0.35777087639996635	0.35777087639996635
+6.75	0.25	0.25			14.68	0.3443835071544513	0.3443835071544513
+7.25	0.25	0.25			13.74	0.33105890714493696	0.33105890714493696
+7.75	0.25	0.25			13.07	0.3269556544854363	0.3269556544854363
+8.25	0.25	0.25			11.83	0.30463092423455634	0.30463092423455634
+8.75	0.25	0.25			11.12	0.29154759474226505	0.29154759474226505
+9.25	0.25	0.25			10.33	0.2823118842698621	0.2823118842698621
+9.75	0.25	0.25			10.24	0.29154759474226505	0.29154759474226505
+10.25	0.25	0.25			9.043	0.26148040079516477	0.26148040079516477
+10.75	0.25	0.25			8.295	0.24579869812511213	0.24579869812511213
+11.25	0.25	0.25			8.319	0.2536651335915127	0.2536651335915127
+11.75	0.25	0.25			7.78	0.2422436789681002	0.2422436789681002
+12.25	0.25	0.25			7.465	0.23938462774372127	0.23938462774372127
+12.75	0.25	0.25			6.839	0.22580079716422613	0.22580079716422613
+13.25	0.25	0.25			6.411	0.21791970998512272	0.21791970998512272
+13.75	0.25	0.25			6.22	0.2176235281397671	0.2176235281397671
+14.25	0.25	0.25			5.89	0.2126405417600322	0.2126405417600322
+14.75	0.25	0.25			5.363	0.1978004044485248	0.1978004044485248
+15.25	0.25	0.25			5.186	0.19725364381932212	0.19725364381932212
+15.75	0.25	0.25			4.792	0.18751533270642162	0.18751533270642162
+16.25	0.25	0.25			4.431	0.17778920102188434	0.17778920102188434
+16.75	0.25	0.25			4.149	0.17026156348395255	0.17026156348395255
+17.25	0.25	0.25			4.346	0.18432851108821988	0.18432851108821988
+17.75	0.25	0.25			3.931	0.17075128110793197	0.17075128110793197
+18.25	0.25	0.25			3.757	0.16737084572887836	0.16737084572887836
+18.75	0.25	0.25			3.753	0.1712687945890903	0.1712687945890903
+19.25	0.25	0.25			3.586	0.1669281282468596	0.1669281282468596
+19.75	0.25	0.25			3.303	0.1577085920297306	0.1577085920297306
+20.25	0.25	0.25			2.952	0.1451344204522139	0.1451344204522139
+20.75	0.25	0.25			2.923	0.14611296999240006	0.14611296999240006
+21.25	0.25	0.25			2.877	0.14709180806557515	0.14709180806557515
+21.75	0.25	0.25			2.603	0.1366930868771351	0.1366930868771351
+22.25	0.25	0.25			2.624	0.141598022585063	0.141598022585063
+22.75	0.25	0.25			2.59	0.14239382009062052	0.14239382009062052
+23.25	0.25	0.25			2.516	0.14141074923781433	0.14141074923781433
+23.75	0.25	0.25			2.2	0.12593649193144932	0.12593649193144932
+24.25	0.25	0.25			1.948	0.11475626344561764	0.11475626344561764
+24.75	0.25	0.25			2.179	0.130862523283024	0.130862523283024
+25.5	0.5	0.5			2.032	0.08755569655939013	0.08755569655939013
+26.5	0.5	0.5			1.736	0.07810249675906654	0.07810249675906654
+27.5	0.5	0.5			1.633	0.07668767828015137	0.07668767828015137
+28.5	0.5	0.5			1.616	0.07864477096412704	0.07864477096412704
+29.5	0.5	0.5			1.381	0.07040596565632773	0.07040596565632773
+31.0	1.0	1.0			1.284	0.04684015371452147	0.04684015371452147
+33.0	1.0	1.0			1.005	0.04026164427839479	0.04026164427839479
+35.0	1.0	1.0			0.8769	0.03715709891797259	0.03715709891797259
+37.0	1.0	1.0			0.7959	0.03607561503287227	0.03607561503287227
+39.0	1.0	1.0			0.7068	0.03432142188196753	0.03432142188196753
+42.0	2.0	2.0			0.5605	0.02006838309381202	0.02006838309381202
+46.0	2.0	2.0			0.46	0.018432851108821986	0.018432851108821986
+50.0	2.0	2.0			0.3552	0.015945218719101973	0.015945218719101973
+54.0	2.0	2.0			0.276	0.013827870407260837	0.013827870407260837
+58.0	2.0	2.0			0.2311	0.012955307792561318	0.012955307792561318
+62.5	2.5	2.5			0.1618	0.009009439494219382	0.009009439494219382
+67.5	2.5	2.5			0.1343	0.008471717653463197	0.008471717653463197
+72.5	2.5	2.5			0.1094	0.00785175139698144	0.00785175139698144
+77.5	2.5	2.5			0.08415	0.006814014969164655	0.006814014969164655
+82.5	2.5	2.5			0.06347	0.005671207984195254	0.005671207984195254
+87.5	2.5	2.5			0.04982	0.005054305095658552	0.005054305095658552
+92.5	2.5	2.5			0.03786	0.00422927889834662	0.00422927889834662
+97.5	2.5	2.5			0.02988	0.003896793553679743	0.003896793553679743
+105.0	5.0	5.0			0.02298	0.002275631780407366	0.002275631780407366
+115.0	5.0	5.0			0.01449	0.001782806775845324	0.001782806775845324
+125.0	5.0	5.0			0.009369	0.0013904736603042864	0.0013904736603042864
+135.0	5.0	5.0			0.008395	0.001497010688004598	0.001497010688004598
+145.0	5.0	5.0			0.005304	0.0011744922307107867	0.0011744922307107867
+162.5	12.5	12.5			0.001861	3.312174512310606E-4	3.312174512310606E-4
+187.5	12.5	12.5			5.283E-4	1.4783250657416315E-4	1.4783250657416315E-4
+225.0	25.0	25.0			2.838E-4	1.0191771190524245E-4	1.0191771190524245E-4
+300.0	50.0	50.0			1.489E-4	1.1620348531778211E-4	1.1620348531778211E-4
+# END YODA_SCATTER2D 
+
+
