@@ -257,7 +257,8 @@ RivetCDFAnalyses_la_SOURCES = \
     CDF_2009_S8383952.cc \
     CDF_2009_S8436959.cc \
     CDF_2010_S8591881_DY.cc \
-    CDF_2010_S8591881_QCD.cc
+    CDF_2010_S8591881_QCD.cc \
+    CDF_2012_I1124333.cc
 if ENABLE_PRELIMINARY
 RivetCDFAnalyses_la_SOURCES += \
     CDF_2009_NOTE_9936.cc \
